--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             	<div class="page-space">
             		<div class="span12">
                 		<h1 class="heading"><span>Search for Engineers</span></h1>
-                    	<h2 class="subheading"><span>Enter a keyword to begin your search</span></h2>                    
+                    	<h2 class="subheading"><span>Enter a keyword to begin your search. For multiple keywords separate by a comma</span></h2>                    
                         <form id="eng-search" name="eng-search" method="post">
                         <div class="searchBar">
                         	<input type="text" id="searchResidents" name="searchResidents" placeholder="Enter a keyword here...">
