--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     <div class="content" id="home">
     	<div class="flexslider">
           	<ul class="slides">
-            	<li><img src="images/IMG_7711.JPG" /></li>
-                <li><img src="images/IMG_7733.JPG" /></li>
-                <li><img src="images/IMG_7773.JPG" /></li>
-                <li><img src="images/IMG_7824.JPG" /></li>
-                <li><img src="images/IMG_7875.JPG" /></li>
+            	<li><img src="images/sliderImages/RS33112__MG_0219.jpg" /></li>
+                <li><img src="images/sliderImages/RS33113__MG_0251.jpg" /></li>
+                <li><img src="images/sliderImages/RS33115__MG_0270.jpg" /></li>
+                <li><img src="images/sliderImages/RS33118__MG_0319(2).jpg" /></li>
+                <li><img src="images/sliderImages/RS33123__MG_9986.jpg" /></li>
           	</ul>
         </div>
         <div class="container">
