--- a/dashboard.html
+++ b/dashboard.html
@@ -36,12 +36,12 @@
                     <nav id="sidemenu">
                         <ul id="nav">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="#addFaculty" class="menu">Add a Faculty Member</a></li>
-                            <li><a href="#addEIR" class="menu">Add an EIR</a></li>
-                            <li><a href="#update" class="menu">Update Information</a></li>
                             <?php
                             	if(isset($_SESSION["user"])){
-                                	echo '<li><a href="php/logout.php">Logout</a></li>';
+                                	echo '<li><a href="#addFaculty" class="menu">Add a Faculty Member</a></li>
+                            		<li><a href="#addEIR" class="menu">Add an EIR</a></li>
+                            		<li><a href="#update" class="menu">Update Information</a></li>
+                                    <li><a href="php/logout.php">Logout</a></li>';
                                 }
                                 else{
                                 	echo '<li><a id="loginButton">Login</a></li>
@@ -70,32 +70,37 @@
         </div>
     </header>
     <!--Header End-->
-    <!--Add a Faculty Member-->
+    <?php
+    if(isset($_SESSION["user"])){
+    echo '<!--Add a Faculty Member-->
     <div class="content" id="addFaculty">
         <div class="container">
         	<div class="row">
             	<div class="page-space">
                    	<h1 class="heading"><span>Add a Faculty Member</span></h1>
                     <div>&nbsp;</div>
-                    <?php
+                    <center>';
                         if(isset($_SESSION['facultyInserted'])){
-                        	echo "<h1>Successfully Inserted</h1>";
-                            echo $_SESSION['facultyInserted'];
+                        	echo $_SESSION['facultyInserted']."<br/><br/>";
                             //unset($_SESSION['facultyInserted']);
                         }
-                        if(isset($_SESSION["fileError"]) && $_SESSION["fileError"]!=NULL){
-                            echo $_SESSION["fileError"]."<br>";
-                            unset($_SESSION["fileError"]);
+                        if(isset($_SESSION['EIRInserted'])){
+                        	echo $_SESSION['EIRInserted']."<br/><br/>";
+                            //unset($_SESSION['EIRInserted']);
                         }
-                        if(isset($_SESSION["fileExists"]) && $_SESSION["fileExists"]!=NULL){
-                            echo $_SESSION["fileExists"]."<br>";
-                            unset($_SESSION["fileExists"]);
+                        if(isset($_SESSION['fileError'])){
+                            echo $_SESSION['fileError']."<br/><br/>";
+                            unset($_SESSION['fileError']);
                         }
-                        if(isset($_SESSION["invalidFile"]) && $_SESSION["invalidFile"]!=NULL){
-                            echo $_SESSION["invalidFile"]."<br>";
-                            unset($_SESSION["invalidFile"]);
+                        if(isset($_SESSION['fileExists'])){
+                            echo $_SESSION['fileExists']."<br/><br/>";
+                            unset($_SESSION['fileExists']);
                         }
-                    ?>
+                        if(isset($_SESSION['invalidFile'])){
+                            echo $_SESSION['invalidFile']."<br/><br/>";
+                            unset($_SESSION['invalidFile']);
+                        }
+                    echo '</center>
             		<div class="span12">
                     	<div class="span2"></div>
                         <form action="addFaculty.php" method="POST" enctype="multipart/form-data">
@@ -193,7 +198,7 @@
         </div>
      </div>
     <!--Add an EIR End-->
-    <!--Search Content-->
+    <!--Update EIR Content-->
     <div class="content" id="update">
         <div class="container">
         	<div class="row">
@@ -209,7 +214,25 @@
             </div>
         </div>
      </div>
-    <!--Search Content-->
+    <!--Update End-->';}
+    else{
+    echo'<!--User Not Logged In-->
+    <div class="content" id="addEIR">
+        <div class="container">
+        	<div class="row">
+            	<div class="page-space">
+                	<div class="span12">
+                    	<div class="divider1">&nbsp;</div>
+                        <center><p>Please log in to view the dashboard</p></center>
+                        <div class="divider1">&nbsp;</div>
+                    </div>
+               </div>
+            </div>
+        </div>
+     </div>
+     <!--User Not Logged In End-->';
+    }
+    ?>
     
     <!--Footer Content-->
     <footer>
