--- a/dashboard.html
+++ b/dashboard.html
@@ -102,7 +102,7 @@
                     echo '</center>
             		<div class="span12">
                     	<div class="span2"></div>
-                        <form action="addFaculty.php" method="POST" enctype="multipart/form-data">
+                        <form action="addfaculty.php" method="POST" enctype="multipart/form-data">
                             <div class="span4">
                                 <input type="text" class="span4" id="name" name="name" placeholder="Name...">
                             </div>
